vscode: add Beautify css, sass and less code extension

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,7 +4,8 @@
 	"service": "web",
 	"workspaceFolder": "/workspaces/timeline-game",
 	"extensions": [
-		"betterthantomorrow.calva"
+		"betterthantomorrow.calva",
+		"michelemelluso.code-beautifier"
 	],
 	"settings":{
 		"calva.jokerPath": "/usr/bin"
