--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "create-react-class": "^15.6.3",
     "highlight.js": "9.18.1",
-    "react": "^16.12.0",
+    "mousetrap": "^1.6.5",
+    "react": "^16.13.1",
     "react-dom": "^16.12.0",
     "react-highlight.js": "1.0.7",
     "shadow-cljs": "^2.8.76"
