--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -6,7 +6,7 @@ RUN apt-get update \
     && apt-get -y install --no-install-recommends apt-utils 2>&1
 
 # Install git, process tools, lsb-release (common in install instructions for CLIs)
-RUN apt-get -y install git procps lsb-release
+RUN apt-get -y install git procps lsb-release rsync
 
 # Clean up
 RUN apt-get autoremove -y \
@@ -21,8 +21,9 @@ RUN wget https://github.com/candid82/joker/releases/download/v${JOKER_VERSION}/j
     && rm joker-${JOKER_VERSION}-linux-amd64.zip \
     && chmod a+x joker && mv joker /usr/bin
 
-# install shadow-cljs
+# npm install globally
 RUN npm install -g shadow-cljs
+RUN npm install -g cordova@latest
 
 # Set the default shell to bash rather than sh
 ENV SHELL /bin/bash
