--- a/cordova/package.json
+++ b/cordova/package.json
@@ -12,9 +12,10 @@
   "author": "",
   "license": "",
   "devDependencies": {
-    "cordova-electron": "^1.1.1",
+    "cordova-electron": "^2.0.0",
     "cordova-plugin-console": "^1.1.0",
-    "cordova-plugin-whitelist": "^1.3.4"
+    "cordova-plugin-whitelist": "^1.3.4",
+    "shelljs": "^0.8.4"
   },
   "cordova": {
     "plugins": {
