feat: hide menu bar

--- a/cordova/resource/electron/settings.json
+++ b/cordova/resource/electron/settings.json
@@ -2,6 +2,7 @@
     "browserWindow": {
         "resizable": true,
         "backgroundColor": "#fff",
+        "autoHideMenuBar": true,
         "webPreferences": {
             "nodeIntegration": false
         }
